@@ -890,6 +890,22 @@ INSERT INTO `tnetwork_component` VALUES (776,'Bytes_received','Bytes&#x20;receiv
 INSERT INTO `tnetwork_component` VALUES (777,'Bytes_sent','Bytes_sent&#x20;by&#x20;database&#x20;&#40;global&#41;',42,4,0,0,300,0,'','','','',6,4,6,'root','root','-q&#x20;Bytes_sent',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
 INSERT INTO `tnetwork_component` VALUES (778,'MySQL_Updates','Updates&#x20;per&#x20;second',42,4,0,0,300,0,'','','','',6,4,6,'root','root','-q&#x20;Com_update',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
 INSERT INTO `tnetwork_component` VALUES (779,'MySQL_Deletes','Deletes&#x20;per&#x20;second',42,4,0,0,300,0,'','','','',6,4,6,'root','root','-q&#x20;Com_delete',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
+INSERT INTO `tnetwork_component` VALUES (780,'%&#x20;CPU&#x20;Usage','Check&#x20;%CPU&#x20;usage&#x20;through&#x20;SNMP',11,1,0,0,0,0,'','','','',2,4,8,'','','-c&#x20;community&#x20;-m&#x20;cpuload',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
+INSERT INTO `tnetwork_component` VALUES (781,'%&#x20;Mem&#x20;Usage','Check&#x20;%Mem&#x20;usage&#x20;through&#x20;SNMP',11,1,0,0,0,0,'','','','',2,4,8,'','','-c&#x20;community&#x20;-m&#x20;memuse',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
+INSERT INTO `tnetwork_component` VALUES (782,'%&#x20;Disk&#x20;C:&#x20;Usage','Check&#x20;Disk&#x20;C:&#x20;usage&#x20;through&#x20;SNMP',11,1,0,0,0,0,'','','','',2,4,8,'','','-c&#x20;community&#x20;-m&#x20;diskuse&#x20;-d&#x20;C:',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
+INSERT INTO `tnetwork_component` VALUES (783,'Service&#x20;DHCP','Check&#x20;DHCP&#x20;service&#x20;through&#x20;SNMP',11,2,0,0,0,0,'','','','',2,4,8,'','','-c&#x20;community&#x20;-m&#x20;process&#x20;-p&#x20;dhcp',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
+INSERT INTO `tnetwork_component` VALUES (784,'Service&#x20;DNS','Check&#x20;DNS&#x20;service&#x20;through&#x20;SNMP',11,2,0,0,0,0,'','','','',2,4,8,'','','-c&#x20;community&#x20;-m&#x20;process&#x20;-p&#x20;dns',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
+INSERT INTO `tnetwork_component` VALUES (785,'%&#x20;Disk&#x20;D:&#x20;Usage','Check&#x20;Disk&#x20;D:&#x20;usage&#x20;through&#x20;SNMP',11,1,0,0,0,0,'','','','',2,4,8,'','','-c&#x20;community&#x20;-m&#x20;diskuse&#x20;-d&#x20;D:',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
+INSERT INTO `tnetwork_component` VALUES (786,'%&#x20;CPU&#x20;Usage&#x20;WMI','Check&#x20;%CPU&#x20;usage&#x20;through&#x20;SNMP',16,1,0,0,0,0,'','','','',2,4,7,'','','-m&#x20;cpuload',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
+INSERT INTO `tnetwork_component` VALUES (787,'%&#x20;Mem&#x20;Usage&#x20;WMI','Check&#x20;%Mem&#x20;usage&#x20;through&#x20;WMI',16,1,0,0,0,0,'','','','',2,4,7,'','','-m&#x20;memuse',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
+INSERT INTO `tnetwork_component` VALUES (788,'%&#x20;DIsk&#x20;C:&#x20;Usage&#x20;WMI','Check&#x20;Disk&#x20;C:&#x20;usage&#x20;through&#x20;WMI',7,1,0,0,0,0,'','','','',2,4,16,'','','-m&#x20;diskuse&#x20;-d&#x20;C:',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
+INSERT INTO `tnetwork_component` VALUES (789,'%&#x20;DIsk&#x20;D:&#x20;Usage&#x20;WMI','Check&#x20;Disk&#x20;D:&#x20;usage&#x20;through&#x20;WMI',7,1,0,0,0,0,'','','','',2,4,16,'','','-m&#x20;diskuse&#x20;-d&#x20;D:',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
+INSERT INTO `tnetwork_component` VALUES (790,'Service&#x20;DHCP&#x20;WMI','Check&#x20;DHCP&#x20;service&#x20;through&#x20;WMI',7,2,0,0,0,0,'','','Running','Select&#x20;State&#x20;from&#x20;Win32_Service&#x20;WHERE&#x20;name&#x20;=&#x20;&#039;dhcp&#039;',3,6,0,'','','',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
+INSERT INTO `tnetwork_component` VALUES (791,'Service&#x20;DNS&#x20;WMI','Check&#x20;DHCP&#x20;service&#x20;through&#x20;WMI',7,2,0,0,0,0,'','','Running','Select&#x20;State&#x20;from&#x20;Win32_Service&#x20;WHERE&#x20;name&#x20;=&#x20;&#039;dns&#039;',3,6,0,'','','',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
+INSERT INTO `tnetwork_component` VALUES (792,'%&#x20;CPU&#x20;Usage','Check&#x20;%CPU&#x20;usage&#x20;through&#x20;SNMP',13,1,0,0,0,0,'','','','',2,4,8,'','','-c&#x20;community&#x20;-m&#x20;cpuload',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
+INSERT INTO `tnetwork_component` VALUES (793,'%&#x20;Mem&#x20;Usage','Check&#x20;%Mem&#x20;usage&#x20;through&#x20;SNMP',13,1,0,0,0,0,'','','','',2,4,8,'','','-c&#x20;community&#x20;-m&#x20;memuse',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
+INSERT INTO `tnetwork_component` VALUES (794,'Service&#x20;DHCP','Check&#x20;DHCP&#x20;service&#x20;through&#x20;SNMP',13,2,0,0,0,0,'','','','',2,4,8,'','','-c&#x20;community&#x20;-m&#x20;process&#x20;-p&#x20;dhcp',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000),(800,'Service&#x20;SSH','Check&#x20;SSH&#x20;service&#x20;through&#x20;SSH',13,2,0,0,0,0,'','','','',2,4,17,'','','-c&#x20;community&#x20;-m&#x20;process&#x20;-p&#x20;ssh',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
+INSERT INTO `tnetwork_component` VALUES (795,'%&#x20;DIsk&#x20;/&#x20;Usage','Check&#x20;Disk&#x20;/&#x20;usage&#x20;through&#x20;SNMP',13,1,0,0,0,0,'','','','',2,4,8,'','','-c&#x20;community&#x20;-m&#x20;diskuse&#x20;-d&#x20;/',0,1,0.00,0.00,'',0.00,0.00,'',0,'','','',0,0,0.0000000000000);
 
 --
 -- Dumping data for table `tnetwork_component_group`
@@ -1029,7 +1045,7 @@ INSERT INTO `trecon_script` VALUES (1,'SNMP&#x20;Recon&#x20;Script','This&#x20;s
 INSERT INTO `trecon_script` VALUES
 (2,'IMPI Recon', 'Specific Pandora FMS Intel DCM Discovery (c) Artica ST 2011 <info@artica.es> Usage: ./ipmi-recon.pl <task_id> <group_id> <create_incident_flag> <custom_field1> <custom_field2> <custom_field3> * custom_field1 = network. i.e.: 192.168.100.0/24 * custom_field2 = username * custom_fiedl3 = password ', '/usr/share/pandora_server/util/recon_scripts/ipmi-recon.pl');
 
-INSERT INTO `tplugin` (`id`, `name`, `description`, `max_timeout`, `execute`, `net_dst_opt`, `net_port_opt`, `user_opt`, `pass_opt`, `plugin_type`) VALUES (1,'IPMI&#x20;Plugin','Plugin&#x20;to&#x20;get&#x20;IPMI&#x20;monitors&#x20;from&#x20;a&#x20;IPMI&#x20;Device.',0,'/usr/share/pandora_server/util/plugin/ipmi-plugin.pl','-h','','-u','-p',0),(2,'DNS&#x20;Plugin','This&#x20;plugin&#x20;is&#x20;used&#x20;to&#x20;check&#x20;if&#x20;a&#x20;specific&#x20;domain&#x20;return&#x20;a&#x20;specific&#x20;IP&#x20;address,&#x20;and&#x20;to&#x20;check&#x20;how&#x20;time&#x20;&#40;milisecs&#41;&#x20;takes&#x20;the&#x20;DNS&#x20;to&#x20;answer.&#x20;Use&#x20;IP&#x20;address&#x20;parameter&#x20;to&#x20;specify&#x20;the&#x20;IP&#x20;of&#x20;your&#x20;domain.&#x20;Use&#x20;these&#x20;custom&#x20;parameters&#x20;for&#x20;the&#x20;other&#x20;parameters:&#x0d;&#x0a;&#x0d;&#x0a;-d&#x20;domain&#x20;to&#x20;check&#x20;&#40;for&#x20;example&#x20;pandorafms.com&#41;&#x0d;&#x0a;-s&#x20;DNS&#x20;Server&#x20;to&#x20;check&#x20;&#x20;&#40;for&#x20;example&#x20;8.8.8.8&#41;&#x0d;&#x0a;&#x0d;&#x0a;Optional&#x20;parameters:&#x0d;&#x0a;&#x0d;&#x0a;-t&#x20;Do&#x20;a&#x20;DNS&#x20;time&#x20;response&#x20;check&#x20;instead&#x20;DNS&#x20;resolve&#x20;test&#x0d;&#x0a;&#x0d;&#x0a;',15,'/usr/share/pandora_server/util/plugin/dns_plugin.sh','-i','','','',0),(3,'UDP&#x20;port&#x20;check','Check&#x20;a&#x20;remote&#x20;UDP&#x20;port&#x20;&#40;by&#x20;using&#x20;NMAP&#41;.&#x20;Use&#x20;IP&#x20;address&#x20;and&#x20;Port&#x20;options.',5,'/usr/share/pandora_server/util/plugin/udp_nmap_plugin.sh','-t','-p','','',0),(4,'SMTP&#x20;Check','This&#x20;plugin&#x20;is&#x20;used&#x20;to&#x20;send&#x20;a&#x20;mail&#x20;to&#x20;a&#x20;SMTP&#x20;server&#x20;and&#x20;check&#x20;if&#x20;works.&#x20;Parameters&#x20;in&#x20;the&#x20;plugin&#x20;&#x0d;&#x0a;IP&#x20;Addres&#x20;-&#x20;SMTP&#x20;Server&#x20;IP&#x20;address&#x0d;&#x0a;User&#x20;-&#x20;AUTH&#x20;login&#x20;&#x20;&#x0d;&#x0a;Pass&#x20;-&#x20;AUTH&#x20;password&#x0d;&#x0a;Port&#x20;-&#x20;SMTP&#x20;port&#x20;&#40;optional&#41;&#x0d;&#x0a;&#x0d;&#x0a;Optional&#x20;parameters&#x20;&#x0d;&#x0a;&#x0d;&#x0a;&#x20;-d&#x20;Destination&#x20;email&#x0d;&#x0a;&#x20;-f&#x20;Email&#x20;of&#x20;the&#x20;sender&#x0d;&#x0a;&#x20;-a&#x20;Autentication&#x20;system,&#x20;could&#x20;be&#x20;LOGIN,&#x20;PLAIN,&#x20;CRAM-MD5&#x20;or&#x20;DIGEST-MD&#x0d;&#x0a;&#x0d;&#x0a;&#x0d;&#x0a;',10,'/usr/share/pandora_server/util/plugin/SMTP_check.pl','-h','-o','-u','-p',0),(6,'MySQL&#x20;Plugin','Makes&#x20;remote&#x20;queries&#x20;against&#x20;a&#x20;MySQL&#x20;to&#x20;obtain&#x20;mysql&#x20;system&#x20;parameters&#x20;about&#x20;performance&#x20;and&#x20;system&#x20;stats.',15,'/usr/share/pandora_server/util/plugin/mysql_plugin.sh','-s','','-u','-p',0),(6,'WMI&#x20;Remote','Basic&#x20;monitorization&#x20;of&#x20;Windows&#x20;Systems&#x20;through&#x20;WMI',0,'perl&#x20;/usr/share/pandora_server/util/plugin/wmi_remote.pl','-H','','-U','-P',0),(6,'SNMP&#x20;remote','',0,'perl&#x20;/usr/share/pandora_server/util/plugin/snmp_remote.pl','-H','','','',0); 
+INSERT INTO `tplugin` (`id`, `name`, `description`, `max_timeout`, `execute`, `net_dst_opt`, `net_port_opt`, `user_opt`, `pass_opt`, `plugin_type`) VALUES (1,'IPMI&#x20;Plugin','Plugin&#x20;to&#x20;get&#x20;IPMI&#x20;monitors&#x20;from&#x20;a&#x20;IPMI&#x20;Device.',0,'/usr/share/pandora_server/util/plugin/ipmi-plugin.pl','-h','','-u','-p',0),(2,'DNS&#x20;Plugin','This&#x20;plugin&#x20;is&#x20;used&#x20;to&#x20;check&#x20;if&#x20;a&#x20;specific&#x20;domain&#x20;return&#x20;a&#x20;specific&#x20;IP&#x20;address,&#x20;and&#x20;to&#x20;check&#x20;how&#x20;time&#x20;&#40;milisecs&#41;&#x20;takes&#x20;the&#x20;DNS&#x20;to&#x20;answer.&#x20;Use&#x20;IP&#x20;address&#x20;parameter&#x20;to&#x20;specify&#x20;the&#x20;IP&#x20;of&#x20;your&#x20;domain.&#x20;Use&#x20;these&#x20;custom&#x20;parameters&#x20;for&#x20;the&#x20;other&#x20;parameters:&#x0d;&#x0a;&#x0d;&#x0a;-d&#x20;domain&#x20;to&#x20;check&#x20;&#40;for&#x20;example&#x20;pandorafms.com&#41;&#x0d;&#x0a;-s&#x20;DNS&#x20;Server&#x20;to&#x20;check&#x20;&#x20;&#40;for&#x20;example&#x20;8.8.8.8&#41;&#x0d;&#x0a;&#x0d;&#x0a;Optional&#x20;parameters:&#x0d;&#x0a;&#x0d;&#x0a;-t&#x20;Do&#x20;a&#x20;DNS&#x20;time&#x20;response&#x20;check&#x20;instead&#x20;DNS&#x20;resolve&#x20;test&#x0d;&#x0a;&#x0d;&#x0a;',15,'/usr/share/pandora_server/util/plugin/dns_plugin.sh','-i','','','',0),(3,'UDP&#x20;port&#x20;check','Check&#x20;a&#x20;remote&#x20;UDP&#x20;port&#x20;&#40;by&#x20;using&#x20;NMAP&#41;.&#x20;Use&#x20;IP&#x20;address&#x20;and&#x20;Port&#x20;options.',5,'/usr/share/pandora_server/util/plugin/udp_nmap_plugin.sh','-t','-p','','',0),(4,'SMTP&#x20;Check','This&#x20;plugin&#x20;is&#x20;used&#x20;to&#x20;send&#x20;a&#x20;mail&#x20;to&#x20;a&#x20;SMTP&#x20;server&#x20;and&#x20;check&#x20;if&#x20;works.&#x20;Parameters&#x20;in&#x20;the&#x20;plugin&#x20;&#x0d;&#x0a;IP&#x20;Addres&#x20;-&#x20;SMTP&#x20;Server&#x20;IP&#x20;address&#x0d;&#x0a;User&#x20;-&#x20;AUTH&#x20;login&#x20;&#x20;&#x0d;&#x0a;Pass&#x20;-&#x20;AUTH&#x20;password&#x0d;&#x0a;Port&#x20;-&#x20;SMTP&#x20;port&#x20;&#40;optional&#41;&#x0d;&#x0a;&#x0d;&#x0a;Optional&#x20;parameters&#x20;&#x0d;&#x0a;&#x0d;&#x0a;&#x20;-d&#x20;Destination&#x20;email&#x0d;&#x0a;&#x20;-f&#x20;Email&#x20;of&#x20;the&#x20;sender&#x0d;&#x0a;&#x20;-a&#x20;Autentication&#x20;system,&#x20;could&#x20;be&#x20;LOGIN,&#x20;PLAIN,&#x20;CRAM-MD5&#x20;or&#x20;DIGEST-MD&#x0d;&#x0a;&#x0d;&#x0a;&#x0d;&#x0a;',10,'/usr/share/pandora_server/util/plugin/SMTP_check.pl','-h','-o','-u','-p',0),(6,'MySQL&#x20;Plugin','Makes&#x20;remote&#x20;queries&#x20;against&#x20;a&#x20;MySQL&#x20;to&#x20;obtain&#x20;mysql&#x20;system&#x20;parameters&#x20;about&#x20;performance&#x20;and&#x20;system&#x20;stats.',15,'/usr/share/pandora_server/util/plugin/mysql_plugin.sh','-s','','-u','-p',0),(7,'WMI&#x20;Remote','Basic&#x20;monitorization&#x20;of&#x20;Windows&#x20;Systems&#x20;through&#x20;WMI',0,'perl&#x20;/usr/share/pandora_server/util/plugin/wmi_remote.pl','-H','','-U','-P',0),(8,'SNMP&#x20;remote','',0,'perl&#x20;/usr/share/pandora_server/util/plugin/snmp_remote.pl','-H','','','',0); 
 
 INSERT INTO `tagent_custom_fields` VALUES (1,'Serial&#x20;Number',0),(2,'Department',0),(3,'Additional&#x20;ID',0);
 
